--- a/dashboard.html
+++ b/dashboard.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Finance Point Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Finance Point Dashboard</title>
+  <meta name="google-adsense-account" content="ca-pub-6719973154337085" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6719973154337085" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
@@ -158,8 +160,19 @@
   </div>  <div class="main">
     <div class="section">
       <h3 id="userName">Welcome...</h3>
-      <p id="userMatric"></p>
-    </div><div class="grid">
+      <p id="userMatric"></p><!-- Google AdSense: Dashboard_Banner -->
+  <ins class="adsbygoogle"
+       style="display:block; text-align:center;"
+       data-ad-client="ca-pub-6719973154337085"
+       data-ad-slot="6153991524"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+
+<div class="grid">
   <div class="card">
     <h4>Students</h4>
     <p id="studentsCount">...</p>
