--- a/dashboard.html
+++ b/dashboard.html
@@ -3,8 +3,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Finance Point Dashboard</title>
-  <meta name="google-adsense-account" content="ca-pub-6719973154337085" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6719973154337085" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
@@ -37,6 +35,15 @@
       font-size: 18px;
       color: gold;
       cursor: pointer;
+    }
+    .logout-fixed-icon {
+      position: fixed;
+      top: 10px;
+      right: 20px;
+      font-size: 20px;
+      color: gold;
+      cursor: pointer;
+      z-index: 999;
     }
     .sidebar a {
       display: block;
@@ -124,7 +131,23 @@
       border: 1px solid gold;
       border-radius: 6px;
     }
-    .quick-links a:hover { background: gold; color: black; }@media (max-width: 768px) {
+    .quick-links a:hover { background: gold; color: black; }
+    .ad-section {
+      background: #1a1a1a;
+      padding: 15px;
+      border: 1px dashed gold;
+      border-radius: 10px;
+      text-align: center;
+      margin: 20px 0;
+    }
+    .ad-section p {
+      color: #ccc;
+      font-size: 14px;
+    }
+    .ad-section a {
+      color: gold;
+      text-decoration: underline;
+    }@media (max-width: 768px) {
   .sidebar { display: none; }
   .main {
     margin-left: 0;
@@ -139,8 +162,9 @@
   </style>
 </head>
 <body>
+  <i class="fas fa-right-from-bracket logout-fixed-icon" title="Sign out" onclick="logout()"></i>
   <div class="sidebar">
-    <h1>Finance Point <i class="fas fa-sign-out-alt logout-icon" title="Sign out" onclick="logout()"></i></h1>
+    <h1>Finance Point</h1>
     <a href="#">Dashboard</a>
     <a href="announcements.html">Announcements</a>
     <a href="events.html">Events</a>
@@ -160,16 +184,10 @@
   </div>  <div class="main">
     <div class="section">
       <h3 id="userName">Welcome...</h3>
-      <p id="userMatric"></p><!-- Google AdSense: Dashboard_Banner -->
-  <ins class="adsbygoogle"
-       style="display:block; text-align:center;"
-       data-ad-client="ca-pub-6719973154337085"
-       data-ad-slot="6153991524"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+      <p id="userMatric"></p>
+    </div><div class="ad-section">
+  <p>Want to promote your brand or service here?<br>
+  <a href="https://wa.me/2348142452729" target="_blank">Click to contact the PRO</a></p>
 </div>
 
 <div class="grid">
@@ -189,14 +207,6 @@
     <h4>Downloads</h4>
     <p id="downloadsCount">...</p>
   </div>
-</div>
-
-<div class="section">
-  <h3>Latest Announcements</h3>
-  <ul>
-    <li>CBT test holds Friday by 10am</li>
-    <li>Seminar registration deadline extended</li>
-  </ul>
 </div>
 
 <div class="section">
